--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,7 +8,7 @@
   <body>
     <nav>
       <a href="/">Home</a>
-      <a href="http://user-name.github.com/blog">Blog</a>
+      <a href="http://mokomolk.github.com/blog">Blog</a>
       <a href="/about/">About</a>
       <a href="/contacts/">Contacts</a>
     </nav>
