--- a/_assets/css/navigation.css
+++ b/_assets/css/navigation.css
@@ -1,5 +1,6 @@
 .main-nav {
-border: solid var(--color-basic-border);
+border-bottom: 1px solid var(--color-basic-border);
+border-top: 1px solid var(--color-basic-border);
 border-width: var(--sizing-basic-border) 0;
 }
 
