--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,6 +1,8 @@
 @import url('typography.css');
 @import url('navigation.css');
 
+@import url('gallery.css');
+
 @import url('site-header.css');
 @import url('site-footer.css');
 
