--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,14 +1,29 @@
 <nav class="main-nav">
     <ul>
         {% for page in site.pages %}
-        {% if page.url != '/feed.xml' and page.url != '/' %}
+        {% if page.url != '/feed.xml' and page.url != '/' and page.url != '/404.html' and  page.url != '/assets/main.css'  %}
         <li>
             <a href="{{ page.url }}">
                 <span class="title">{{ page.title }}</span>
                 <span class="date">{{ page.date | date_to_string }}</span>
             </a>
+            <ul>
+                {% for page in site.pages %}
+                {% if page.url != '/feed.xml' and page.url != '/' and page.url != '/404.html' and  page.url != '/assets/main.css'  %}
+                <li>
+                    <a href="{{ page.url }}">
+                        <span class="title">{{ page.title }}</span>
+                        <span class="date">{{ page.date | date_to_string }}</span>
+                    </a>
+                </li>
+                {% endif %}
+                {% endfor %}
+            </ul>
         </li>
         {% endif %}
         {% endfor %}
     </ul>
+    
 </nav>
+<a href="mailto:mail@gmail.com" class="button button-primary">Call Us</a>
+<!-- Sharing links https://css-tricks.com/simple-social-sharing-links/ -->
