--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,17 +3,25 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ page.title }}</title>
-  <link rel="stylesheet" href="{{ site.baseurl }}/css/style.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/site.css">
 </head>
 
-<body>
-  <header class="site-header">
-    <h1><a href="/">{{ page.title }}</a></h1>
-    {% include navigation.html %}
- </header>
- 
-  <main class="site-header">
+<body class="{{ page.body_class }} {{ page.title | slugify }}">
+
+  <header class="site-header banner {% if page.url == '/' %} size-large {% else %} size-small {% endif %}"
+    style="background-image: url(https://images.unsplash.com/photo-1623101622795-dc2f6b071f34?ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDE4fDZzTVZqVExTa2VRfHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60);">
+    <div class="inner">
+
+      <h1 class="site-title"><a href="/">{{ page.title }}</a></h1>
+      {% include navigation.html %}
+      
+
+    </div>
+  </header>
+
+  <main class="site-main">
     {{ content }}
   </main>
 
