--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -3,7 +3,7 @@
         {% for page in site.pages %}
         {% if page.url != '/feed.xml' and page.url != '/' and page.url != '/404.html' and  page.url != '/assets/main.css'  %}
         <li>
-            <a href="{{{ site.baseurl }}/{ page.url }}">
+            <a href="{{ site.baseurl }}/{{ page.url }}">
                 <span class="title">{{ page.title }}</span>
                 <span class="date">{{ page.date | date_to_string }}</span>
             </a>
